--- a/layouts/partials/article-list/default.html
+++ b/layouts/partials/article-list/default.html
@@ -6,8 +6,10 @@
 
     {{ if $image.exists }}
     <div class="post-item-image-wrapper">
-        <div class="post-item-image" {{ $thumbnail :=$image.resource.Resize "690x360" }}
-            style="background-image: url('{{ $image.permalink }}')"></div>
+        <a href="{{ .RelPermalink }}">
+            <div class="post-item-image" {{ $thumbnail :=$image.resource.Resize "690x360" }}
+                style="background-image: url('{{ $image.permalink }}')"></div>
+        </a>
     </div>
     {{ end }}
 </article>
